# clang-format-all

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: Unix.yml  builds.yml  linux.yml  make_release.yml  ubuntu.yml  windows.yml
cmake/: PreventInSourceBuilds.cmake  ProjectOptions.cmake  Sanitizers.cmake
scripts/: build_unix.sh  build_win.bat
src/: exit_codes.hxx  files_collector.hxx  files_formatter.hxx  files_utils.hxx  log.hxx  main.cxx  statics.hxx  types.hxx
